--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "config": "^3.3.9",
     "dotenv": "^16.0.3",
+    "express": "^4.18.2",
     "nodemon": "^2.0.20"
   },
   "devDependencies": {},
