--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js &"
+    "start": "nodemon index.js &",
+    "stop": "pkill -f nodemon"
   },
   "repository": {
     "type": "git",
