added cookies to .env

--- a/src/config/.env.template
+++ b/src/config/.env.template
@@ -2,3 +2,6 @@ DISCORD_BOT_TOKEN=""
 REDDIT_USERNAME=""
 REDDIT_BOT_ID=""
 REDDIT_BOT_SECRET=""
+HONEYGAIN_COOKIES=""
+GENSHIN_COOKIES_ME=""
+GENSHIN_COOKIES_SASHA=""
