--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "config": "^3.3.9",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "nodemon": "^2.0.21"
+    "nodemon": "^2.0.21",
+    "pg-promise": "^11.4.3"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
