--- a/src/config/.env.template
+++ b/src/config/.env.template
@@ -5,3 +5,6 @@ REDDIT_BOT_SECRET=""
 HONEYGAIN_COOKIES=""
 GENSHIN_COOKIES_ME=""
 GENSHIN_COOKIES_SASHA=""
+DB_USER=""
+DB_PASSWORD=""
+DB_HOSTNAME=""
