fixed env directory

--- a/.env.template
+++ b/.env.template
@@ -5,6 +5,8 @@ REDDIT_BOT_SECRET=""
 HONEYGAIN_COOKIES=""
 GENSHIN_COOKIES_ME=""
 GENSHIN_COOKIES_SASHA=""
-DB_USER=""
+DB_USERNAME=""
 DB_PASSWORD=""
 DB_HOSTNAME=""
+DB_PORT=""
+DB_DATABASE=""
