--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "node-fetch": "^3.3.1",
     "nodemon": "^2.0.21",
     "pg-promise": "^11.4.3"
   },
